2001-08-08  Dave Peticolas  <dave@krondo.com>

	* src/register/register-gnome/pricecell-gnome.c: better 'return'
	handling.

2001-08-06  Dave Peticolas  <dave@krondo.com>

	* src/register/pricecell.c: fix bugs

2001-08-05  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-register.c: move close button to left
	to be more consistent with main window

	* src/SplitLedger.c (sr_split_auto_calc): fix bug

2001-08-04  Dave Peticolas  <dave@krondo.com>

	* src/scm/main-window.scm: handle errors in creating
	~/.gnucash/books

	* src/scm/path.scm (gnc:make-dir): new func

	* src/scm/options.scm: same as below

	* src/scm/html-style-sheet.scm: handle file opening error

2001-07-30  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm: Fixed bug with sub-balances in
	account tables with non-default account selection.

2001-07-17  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-features.sgml: Matt Krai's doc patch

	* doc/sgml/C/xacc-about.sgml: Matt Krai's doc patch

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/gnome/gnc-dateedit.c: Matt Kraai's date accelerator bug fix

	* src/engine/io-gncbin-r.c: fix bug with price import (use
	posted date, not entered date).

	* src/engine/gnc-pricedb.[ch]: fix bugs with setting currency and
	commodity and with converting from legacy commodities.

2001-07-17  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/scm/report/transaction.scm: Michael T. Garrison Stuber's
	transaction report patch.

2001-07-11  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: fix credits

	* doc/sgml/C/xacc-about.sgml: fix docs, credits

2001-07-11  James LewisMoss  <jimdres@mindspring.com>

	* configure.in (GNOME_XML_CFLAGS): add Richard Braakman's xml
	version check.

2001-07-09  Dave Peticolas  <dave@krondo.com>

	* configure.in: check for ghttp_ssl.h

	* src/gnome/gnc-http.c: conditionally include ghttp_ssl.h

	* doc/sgml/C/xacc-whats-new.sgml: fix spelling
