@@ -3153,6 +3153,9 @@ sr_split_auto_calc (SplitRegister *reg, Split *split, guint32 changed)
 
       xaccSetPriceCellValue (reg->sharesCell, amount);
       changed |= MOD_SHRS;
+
+      if (MOD_AMNT & changed)
+        changed &= ~MOD_PRIC;
     }
 
   if (recalc_price)
@@ -3182,6 +3185,9 @@ sr_split_auto_calc (SplitRegister *reg, Split *split, guint32 changed)
 
     xaccSetDebCredCellValue (reg->debitCell, reg->creditCell, value);
     changed |= MOD_AMNT;
+
+    if (MOD_SHRS & changed)
+      changed &= ~MOD_PRIC;
   }
 
   return changed;
@@ -3424,12 +3430,10 @@ xaccSRSaveChangedCells (SplitRegister *reg, Transaction *trans, Split *split)
   if (MOD_SHRS & changed)
   {
     gnc_numeric amount = xaccGetPriceCellValue (reg->sharesCell);
-    gnc_numeric price  = xaccGetPriceCellValue (reg->priceCell);
 
     DEBUG ("MOD_SHRS");
 
     xaccSplitSetShareAmount (split, amount);
-    xaccSplitSetSharePrice (split, price);
   }
 
   if (MOD_PRIC & changed)
@@ -3464,12 +3468,15 @@ xaccSRSaveChangedCells (SplitRegister *reg, Transaction *trans, Split *split)
 
     if (other_split)
     {
-      gnc_numeric amount = xaccSplitGetShareAmount (split);
-      gnc_numeric price = xaccSplitGetSharePrice (split);
+      gnc_numeric amount;
+      gnc_commodity *currency;
 
+      currency = xaccTransGetCurrency (trans);
+
+      amount = xaccSplitGetBaseValue (split, currency);
       amount = gnc_numeric_neg (amount);
 
-      xaccSplitSetSharePriceAndAmount (other_split, price, amount);
+      xaccSplitSetBaseValue (other_split, amount, currency);
       xaccSplitScrub (other_split);
     }
   }
